--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -27,13 +27,13 @@
 						</strong>
 						<div class="small">
 							<a href='{{ row.history_link }}' target="_blank"
-							   class="{{ row.page_dead ? 'text-danger' : '' }}">{{ 'record-history'|message }}</a>
+							   class="{{ row.page_dead ? 'text-danger' : '' }}">{{ 'history'|message }}</a>
 						</div>
 					</div>
 					{# Div for diff information and link #}
 					<div class="row-div col-sm-2 text-center diff-div">
 						<a href='{{ row.diff_link }}' target="_blank"
-						   class="{{ row.page_dead ? 'text-danger' : '' }}">{{ 'record-diff'|message }}</a>
+						   class="{{ row.page_dead ? 'text-danger' : '' }}">{{ 'diff'|message }}</a>
 						<br/>
 						<small class="diff-div-timestamp">
 							<time datetime="{{ row.diff_timestamp }}">{{ row.diff_timestamp }}</time>
@@ -55,13 +55,13 @@
 							<br/>
 							<small>
 								<a href='{{ row.editor_talk }}' class="{{ row.editor_talk_dead ? 'text-danger' : '' }}"
-								   target="_blank">{{ 'record-talk'|message }}</a>
+								   target="_blank">{{ 'talk' | message }}</a>
 								|
 								<a href='{{ row.editor_contribs }}' target="_blank">
-									{{ 'record-contribs'|message }}
+									{{ 'contribs' | message }}
 								</a>
 								{% if row.editcount %}
-									<div>{{ 'record-editcount'|message }} {{ row.editcount | number_format }}</div>
+									<div>{{ 'record-editcount' | message }} {{ row.editcount | number_format }}</div>
 								{% endif %}
 							</small>
 						{% else %}
@@ -104,21 +104,21 @@
 								        data-id="{{ row.ithenticate_id }}" data-index="{{ loop.index }}"
 								        data-copyvio="{{ copy.url }}" data-diffId="{{ row.diff }}">
 									<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-									{{ 'record-compare'|message }}
+									{{ 'compare' | message }}
 								</button>
-								{{ 'record-url-text'|message( copy.percentage, copy.count|number_format ) }}
+								{{ 'record-url-text' | message( copy.percentage, copy.count | number_format ) }}
 								<a href="{{ copy.url }}" target="_blank">{{ copy.url }}</a><br/>
 								<div class="compare-pane" id="{{ 'comp' ~ row.ithenticate_id ~ '-' ~ loop.index }}">
 									<div class="compare-pane-left">
-										<h4 class="compare-pane-title">{{ 'compare-article'|message }}</h4>
+										<h4 class="compare-pane-title">{{ 'article' | message }}</h4>
 										<div class="compare-pane-left-body compare-pane-body">
-											<span class="text-muted">{{ 'compare-article-loading'|message }}</span>
+											<span class="text-muted">{{ 'compare-article-loading' | message }}</span>
 										</div>
 									</div>
 									<div class="compare-pane-right">
-										<h4 class="compare-pane-title">{{ 'compare-source'|message }}</h4>
+										<h4 class="compare-pane-title">{{ 'source' | message }}</h4>
 										<div class="compare-pane-right-body compare-pane-body">
-											<span class="text-muted">{{ 'compare-source-loading'|message }}</span>
+											<span class="text-muted">{{ 'compare-source-loading' | message }}</span>
 										</div>
 									</div>
 								</div>
@@ -127,7 +127,7 @@
 					{% endif %}
 					<a class="btn btn-xs btn-primary compare-button" href='{{ row.turnitin_report }}' target="_blank">
 						<span class="glyphicon glyphicon-new-window"></span>
-						{{ 'record-ithenticate'|message }}
+						{{ 'record-ithenticate' | message }}
 					</a>
 				</div>
 			</article>
