--- a/public_html/templates/leaderboard.html
+++ b/public_html/templates/leaderboard.html
@@ -16,7 +16,7 @@
 
 {% block main %}
 	<section class="leaderboard container">
-		<a class="back-to-copypatrol" href="{{ siteUrl( '' ) }}">
+		<a class="back-to-copypatrol" href="{{ urlFor( 'home', {lang:lang} ) }}">
 			<span class="glyphicon glyphicon-chevron-left"></span>
 			{{ 'lboard-back'|message }}
 		</a>
