--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -285,6 +285,12 @@ body {
 	}
 }
 
+#lang-selector {
+	float: right;
+	bottom: -10px;
+	margin-right: 120px;
+}
+
 .app-header {
 	background: url('images/gradient.png');
 	border-bottom: solid 2px #ccc;
