--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -1,20 +1,8 @@
 <header class="app-header">
-	<a href="{{ urlFor( 'home', {lang:lang} ) }}"><img src="{{ siteUrl( 'images/copypatrol.png' ) }}"/></a>
+	<a href="{{ urlFor( 'home', {wikiLang:wikiLang} ) }}"><img src="{{ siteUrl( 'images/copypatrol.png' ) }}"/></a>
 	<a class="header-link" target="_blank" href="https://meta.wikimedia.org/wiki/CopyPatrol">{{ 'documentation' | message }}</a>
 	<a class="header-link" target="_blank" href="https://meta.wikimedia.org/wiki/Talk:CopyPatrol">{{ 'feedback' | message | raw }}</a>
-	<a class="header-link" href="{{ urlFor( 'leaderboard', {lang:lang} ) }}">{{ 'leaderboard' | message }}</a>
-
-	<div id="lang-selector" class="dropdown">
-		<a href="#" class="dropdown-toggle header-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-			{{ 'switch-language' | message }} <span class="caret"></span>
-		</a>
-		<ul class="dropdown-menu">
-			{% for l in langs %}
-			<li><a href="{{ urlFor( 'home', {lang:l} ) }}">{{l}}</a></li>
-			{% endfor %}
-		</ul>
-	</div>
-
+	<a class="header-link" href="{{ urlFor( 'leaderboard', {wikiLang:wikiLang} ) }}">{{ 'leaderboard' | message }}</a>
 	{% if user %}
 		<a href="{{ urlFor( 'logout' ) }}" id="login-btn" class="btn btn-sm btn-default {{ user ? 'logged-in' : '' }}">
 			<span class=" glyphicon glyphicon-log-in"></span> {{ 'logout' | message }}<br>
