--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -83,12 +83,12 @@
 			<form id="filters-form">
 				<fieldset class="form-group filters-fieldset text-center">
 					<div class="cases-filter col-sm-12">
-						{% for type, description in filterTypes %}
+						{% for type in filterTypes %}
 							<span class="radio-inline">
 								<label>
 									<input type="radio" name="filter" value="{{ type }}"
 											{% if filter == type %} checked="checked"{% endif %}
-									/> {{ description }}
+									/> {{ ('form-'~type) | message }}
 								</label>
 							</span>
 						{% endfor %}
