--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -1,9 +1,10 @@
-{% set lang = i18nCtx.getCurrentLanguage %}
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="{{ i18nCtx.currentLanguage }}">
 <head>
-	<title>{{ 'name' | message }}</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>{{ 'name' | message }} | {{ (wikiLang~'-wikipedia') | message }}</title>
 	<link href="{{ siteUrl( 'images/favicon.ico' ) }}" rel="shortcut icon" sizes="16x16 32x32"/>
 	{% block stylesheets %}
 		<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
@@ -20,13 +21,15 @@
 		<script src="{{ siteUrl( 'vendor/select2.min.js' ) }}" type="text/javascript"></script>
 	{% endblock %}
 	<script>
-		var formWikiprojectsPlaceholder = "{{ 'form-wikiprojects-placeholder' | message }}",
+		var baseUrl = "{{ siteUrl( '' ) }}",
+				formWikiprojectsPlaceholder = "{{ 'form-wikiprojects-placeholder' | message }}",
 				jsUnauthorized = "{{ 'js-unauthorized' | message }}",
 				jsDbError = "{{ 'js-dberror' | message }}",
 				jsUndoOwnOnly = "{{ 'js-undo-own-only' | message }}",
 				jsUnknownError = "{{ 'js-unknown-error' | message }}",
 				jsLoadMore = "{{ 'footer-loadmore' | message }}",
-				jsNoMore = "{{ 'footer-nomore' | message }}";
+				jsNoMore = "{{ 'footer-nomore' | message }}",
+				wikiLang = "{{ wikiLang }}";
 	</script>
 </head>
 
@@ -80,15 +83,16 @@
 			<form id="filters-form">
 				<fieldset class="form-group filters-fieldset text-center">
 					<div class="cases-filter col-sm-12">
-						{% for type, description in filterTypes %}
+						{% for type in filterTypes %}
 							<span class="radio-inline">
 								<label>
 									<input type="radio" name="filter" value="{{ type }}"
 											{% if filter == type %} checked="checked"{% endif %}
-									/> {{ description }}
+									/> {{ ('form-'~type) | message }}
 								</label>
 							</span>
 						{% endfor %}
+						{% if draftsExist %}
 						<span class="checkbox-inline">
 							<label>
 								<input type="checkbox" name="drafts" value="1"
@@ -96,6 +100,7 @@
 								/> {{ 'form-drafts' | message }}
 							</label>
 						</span>
+						{% endif %}
 					</div>
 					<div class="wikiproject-filter col-sm-12">
 						<label class="wikiproject-label" for="wikiproject-selector">
