--- a/public_html/templates/leaderboard.html
+++ b/public_html/templates/leaderboard.html
@@ -2,14 +2,13 @@
 {% import _self as macros %}
 
 {# must pass in wiki and username as view-level variables are not accessible in macros #}
-{% macro leaderboard_list( wiki, dataset, username ) %}
+{% macro leaderboard_list( wikiLang, dataset, username ) %}
 	<ol class="leaderboard-list">
 		{% for leader in dataset %}
 			<li class="ellipsis">
-				<a target="_blank" href="{{ wiki }}/wiki/User:{{ leader['user'] }}"
-				   class="{{ username == leader['user'] ? 'mine' : '' }}">{{ leader['user'] }}</a>
-				:
-				{{ leader['count'] | number_format }}</li>
+				<a target="_blank" href="https://{{ wikiLang }}.wikipedia.org/wiki/User:{{ leader.user }}"
+				   class="{{ username == leader.user ? 'mine' : '' }}">{{ leader.user }}</a>:
+				{{ leader.count | number_format }}</li>
 		{% endfor %}
 	</ol>
 {% endmacro %}
@@ -24,15 +23,15 @@
 		<div class="text-center clearfix">
 			<span class="leaderboard-column col-sm-4">
 				<h3>{{ 'lboard-week'|message|raw }}</h3>
-				{{ macros.leaderboard_list( wiki, data['last-week'], user.name ) }}
+				{{ macros.leaderboard_list( wikiLang, data['last-week'], user.name ) }}
 			</span>
 			<span class="leaderboard-column col-sm-4">
 				<h3>{{ 'lboard-month'|message|raw }}</h3>
-				{{ macros.leaderboard_list( wiki, data['last-month'], user.name ) }}
+				{{ macros.leaderboard_list( wikiLang, data['last-month'], user.name ) }}
 			</span>
 			<span class="leaderboard-column col-sm-4">
 				<h3>{{ 'lboard-alltime'|message|raw }}</h3>
-				{{ macros.leaderboard_list( wiki, data['all-time'], user.name ) }}
+				{{ macros.leaderboard_list( wikiLang, data['all-time'], user.name ) }}
 			</span>
 		</div>
 	</section>
