Add a dropdown for switching between Wikipedias
This changes to using the Bootstrap navbar for the main menu, so
that it's easier to incorporate a dropdown with which to switch
from English to French or vice versa. This switch will to to the
corresponding other-language page (so if you're on the leaderboard
and switch you'll be on the other language's leaderboard).

Bug: https://phabricator.wikimedia.org/T150956

--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -272,31 +272,17 @@ body {
 	padding: 12px 12px 95px;
 }
 
-#login-btn {
-	height: 48px;
-	line-height: 36px;
-	padding: 5px 20px;
-	position: absolute;
-	right: 14px;
-	top: 14px;
-
-	&.logged-in {
-		line-height: inherit;
-	}
-}
-
-.app-header {
+.app-header .navbar {
 	background: url('images/gradient.png');
 	border-bottom: solid 2px #ccc;
 	margin-bottom: 10px;
-	padding: 15px;
 	text-align: left;
 }
-
-.header-link {
-	font-size: 18px;
-	margin-left: 20px;
-	vertical-align: -7px;
+.app-header .navbar-brand { padding:2px }
+.app-header .navbar-left { font-size:larger }
+.app-header .navbar-right label {
+	font-weight:normal;
+	margin: 5px 20px 0 0;
 }
 
 // absolutely positioned at the bottom to appear at the bottom
