--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -1,16 +1,57 @@
 <header class="app-header">
-	<a href="{{ urlFor( 'home', {wikiLang:wikiLang} ) }}"><img src="{{ siteUrl( 'images/copypatrol.png' ) }}"/></a>
-	<a class="header-link" target="_blank" href="https://meta.wikimedia.org/wiki/CopyPatrol">{{ 'documentation' | message }}</a>
-	<a class="header-link" target="_blank" href="https://meta.wikimedia.org/wiki/Talk:CopyPatrol">{{ 'feedback' | message | raw }}</a>
-	<a class="header-link" href="{{ urlFor( 'leaderboard', {wikiLang:wikiLang} ) }}">{{ 'leaderboard' | message }}</a>
-	{% if user %}
-		<a href="{{ urlFor( 'logout' ) }}" id="login-btn" class="btn btn-sm btn-default {{ user ? 'logged-in' : '' }}">
-			<span class=" glyphicon glyphicon-log-in"></span> {{ 'logout' | message }}<br>
-			<small>{{ 'header-loggedin' | message( user.name ) }}</small>
-		</a>
-	{% else %}
-		<a href="{{ urlFor( 'oauth_init' ) }}" id="login-btn" class="btn btn-sm btn-default">
-			<span class=" glyphicon glyphicon-log-in"></span> {{ 'login' | message }}
-		</a>
-	{% endif %}
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navigation" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="{{ urlFor( 'home', {wikiLang:wikiLang} ) }}">
+					<img src="{{ siteUrl( 'images/copypatrol.png' ) }}" alt="'CopyPatrol' logo (with text)" />
+				</a>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="main-navigation">
+				<ul class="nav navbar-nav navbar-left">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							{{ (wikiLang~'-wikipedia') | message }} <span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							{% if wikiLang != 'en' %}
+							<li><a href="{{ urlFor( currentRoute, {wikiLang:'en'} ) }}">{{ ('en-wikipedia') | message }}</a></li>
+							{% endif %}
+							{% if wikiLang != 'fr' %}
+							<li><a href="{{ urlFor( currentRoute, {wikiLang:'fr'} ) }}">{{ ('fr-wikipedia') | message }}</a></li>
+							{% endif %}
+						</ul>
+					</li>
+					<li><a target="_blank" href="https://meta.wikimedia.org/wiki/CopyPatrol">{{ 'documentation' | message }}</a></li>
+					<li><a target="_blank" href="https://meta.wikimedia.org/wiki/Talk:CopyPatrol">{{ 'feedback' | message }}</a></li>
+					<li><a href="{{ urlFor( 'leaderboard', {wikiLang:wikiLang} ) }}">{{ 'leaderboard' | message }}</a></li>
+				</ul>
+
+				{% if user %}
+				<form class="navbar-form navbar-right" method="get" action="{{ urlFor( 'logout' ) }}">
+					<div class="form-group">
+						<label>{{ 'header-loggedin' | message( user.name ) }}</label>
+						<button class="btn btn-default logged-in form-control" id="logout-btn">
+							<span class="glyphicon glyphicon-log-out"></span> {{ 'logout' | message }}
+						</button>
+					</div>
+				</form>
+				{% else %}
+				<form class="navbar-form navbar-right" method="get" action="{{ urlFor( 'oauth_init' ) }}">
+					<button class="btn btn-default" id="login-btn">
+						<span class="glyphicon glyphicon-log-in"></span> {{ 'login' | message }}
+					</button>
+				</form>
+				{% endif %}
+
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 </header>
