Dynamically retrieve list of supported languages
The list of languages supported by CopyPatrol is retrieved from
the database, and cached for 7 days. The dropdown list in the
navbar now lists all these. Translations for all Wikipedias'
titles have been added.

The phpcs change is just to ignore the cache directory that
exists for local development.

Bug: https://phabricator.wikimedia.org/T152362

--- a/public_html/templates/header.html
+++ b/public_html/templates/header.html
@@ -21,12 +21,13 @@
 							{{ (wikiLang~'-wikipedia') | message }} <span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							{% if wikiLang != 'en' %}
-							<li><a href="{{ urlFor( currentRoute, {wikiLang:'en'} ) }}">{{ ('en-wikipedia') | message }}</a></li>
-							{% endif %}
-							{% if wikiLang != 'fr' %}
-							<li><a href="{{ urlFor( currentRoute, {wikiLang:'fr'} ) }}">{{ ('fr-wikipedia') | message }}</a></li>
-							{% endif %}
+							{% for supLang in supportedLanguages %}
+								{% if supLang != wikiLang %}
+								<li>
+									<a href="{{ urlFor( currentRoute, {wikiLang: supLang} ) }}">{{ (supLang~'-wikipedia') | message }}</a>
+								</li>
+								{% endif %}
+							{% endfor %}
 						</ul>
 					</li>
 					<li><a target="_blank" href="https://meta.wikimedia.org/wiki/CopyPatrol">{{ 'documentation' | message }}</a></li>
