--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -310,8 +310,11 @@ body {
 	}
 }
 
+.status-buttons {
+	margin-bottom: 10px;
+}
+
 .status-div-reviewer {
-	margin-top: 10px;
 	text-align: center;
 }
 
@@ -352,10 +355,11 @@ a[href=''] {
 	width: 100%;
 }
 
-#btn-load-more {
+.btn-load-more {
 	background-color: white;
 	color: @brand-primary;
 	height: 40px;
+	line-height: 26px;
 	width: 50%;
 	.transition(background-color linear 350ms);
 
