--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -80,7 +80,7 @@
 
 	{% block main %}
 		{# Make the filters invisible but don't hide markup so that JS can react to clicking on WP bubbles #}
-		<section class="filters container-fluid {% if permalink %}none{% endif %}">
+		<section class="filters container-fluid{% if permalink %} none{% endif %}">
 			<form id="filters-form">
 				<fieldset class="form-group filters-fieldset text-center">
 					<div class="cases-filter col-sm-12">
@@ -145,7 +145,7 @@
 			</section>
 			<div class="load-more-div">
 				{% if permalink %}
-					<a href="{{ baseUrl() }}" class="btn btn-md btn-primary btn-load-more">Show all records</a>
+					<a href="{{ baseUrl() }}" class="btn btn-md btn-primary btn-load-more">{{ 'show-all-records' | message }}</a>
 				{% else %}
 					{% block loadmore %}
 						<button id="btn-load-more"
