Add searching by page title, remove wikiproject search

--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -90,7 +90,7 @@ body {
 	word-wrap: break-word;
 }
 
-.wikiproject-div {
+.form-group {
 	align-items: center;
 	display: block;
 	flex-flow: row wrap;
@@ -103,6 +103,10 @@ body {
 	border-top: 2px solid black;
 	margin: 10px;
 	padding: 5px 0;
+}
+
+.form-check {
+	margin: 1%;
 }
 
 .header-col {
@@ -420,15 +424,14 @@ a[href=''] {
 	}
 }
 
-.wikiproject-selector[multiple] {
-  display: block;
-  height: 34px;
-  min-width: 330px; // Select2 doesn't know how to resize properly on smaller screens
+.searchbox {
+	float: none;
+	margin-top: 2px;
+	padding: 2px;
 }
 
-.wikiproject-label {
-  display: block;
-  margin-top: 10px;
+.search-label {
+  padding-right: 1%;
 }
 
 .cases-filter {
