--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -76,7 +76,7 @@
 					<div class="row-div col-sm-3 text-center wikiproject-div">
 						{% if row.wikiprojects is not empty %}
 							{% for wp in row.wikiprojects %}
-								<a class="row-div wproject" href="#">{{ wp }}</a>
+								<div class="row-div wproject">{{ wp }}</div>
 							{% endfor %}
 						{% endif %}
 					</div>
