--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -431,8 +431,9 @@ a[href=''] {
 	padding: 2px;
 }
 
-.search-label {
-  padding-right: 1%;
+	.search-label {
+		display: inline-block;
+		padding-right: 5px;
 }
 
 .cases-filter {
