--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -71,7 +71,7 @@ body {
 
 .wproject {
 	background: #f2f2f2;
-	color: #3f5fbf;
+	color: #2DABAD;
 	border-radius: 10px;
 	display: inline-block;
 	font-size: 13px;
