Add noindex rule in page header
Bug: https://phabricator.wikimedia.org/T204369

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="{{ i18nCtx.currentLanguage }}">
 <head>
 	<meta charset="utf-8">
+	<meta name="robots" content="noindex" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ 'name' | message }} | {{ (wikiLang~'-wikipedia') | message }}</title>
