Migrate earnbot's ithenticate script to CopyPatrol
This means we no longer rely on an outside webserver to fetch document
IDs from Ithenticate.

Bug: T309816

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -133,7 +133,7 @@
 							</div>
 						{% endfor %}
 					{% endif %}
-					<a class="btn btn-xs btn-primary compare-button" href='{{ row.turnitin_report }}' target="_blank">
+					<a class="btn btn-xs btn-primary compare-button" href='{{ row.turnitin_report }}' rel='nofollow noreferrer noopener' target="_blank">
 						<span class="glyphicon glyphicon-new-window"></span>
 						{{ 'record-ithenticate' | message }}
 					</a>
