--- a/public_html/templates/leaderboard.html
+++ b/public_html/templates/leaderboard.html
@@ -8,7 +8,8 @@
 			<li class="ellipsis">
 				<a target="_blank" href="https://{{ wikiLang }}.wikipedia.org/wiki/User:{{ leader.user }}"
 				   class="{{ username == leader.user ? 'mine' : '' }}">{{ leader.user }}</a>:
-				{{ leader.count | number_format }}</li>
+				<a href="{{ urlFor( 'home', {wikiLang:wikiLang} ) }}?filter=reviewed&filterUser={{ leader.user }}"
+					>{{ leader.count | number_format }}</a></li>
 		{% endfor %}
 	</ol>
 {% endmacro %}
