--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -10,7 +10,7 @@
 	{% block stylesheets %}
 		<link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
 		      rel="stylesheet"/>
-		<link href="{{ siteUrl( 'index.css' ) }}" type="text/css" rel="stylesheet"/>
+		<link href="{{ siteUrl( 'styles' ) }}" type="text/css" rel="stylesheet"/>
 		<link href="{{ siteUrl( 'vendor/select2.min.css' ) }}" type="text/css" rel="stylesheet"/>
 	{% endblock %}
 	{% block scripts %}
